added adaptiv and hover effect edited font

--- a/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
@@ -10,35 +10,31 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__container">
-                <div class="header__left-container">
-                    <a href="#" class="header__logo">
-                        <svg class="logo__icon" xmlns="http://www.w3.org/2000/svg" width="62" height="28" viewBox="0 0 62 28" fill="none">
-                            <use href="./src/sprite.svg#logo"></use>
-                        </svg>
-                    </a>
-                    <nav class="header__navigation">
-                        <a href="#" class="navigation__item">Design Gallery</a>
-                        <a href="#" class="navigation__item">List of Architect</a>
-                        <a href="#" class="navigation__item">Articles</a>
-                        <a href="#" class="navigation__item">How it Works</a>
-                    </nav>
-                </div>
-                <div class="header__actions">
-                    <svg class="action__switch-style" xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none" data-switch>
-                        <use href="./src/sprite.svg#luna" data-switch-href></use>
+            <div class="header__left-container">
+                <a href="#" class="header__logo">
+                    <svg class="logo__icon" xmlns="http://www.w3.org/2000/svg" width="62" height="28" viewBox="0 0 62 28" fill="none">
+                        <use href="./src/sprite.svg#logo"></use>
                     </svg>
-                    <button type="button" class="sign-in__action">Sign In</button>
-                    <button type="button" class="sign-up__action">Sign Up</button>
-                </div>
+                </a>
+                <nav class="header__navigation" data-menu>
+                    <a href="#" class="navigation__item">Design Gallery</a>
+                    <a href="#" class="navigation__item">List of Architect</a>
+                    <a href="#" class="navigation__item">Articles</a>
+                    <a href="#" class="navigation__item">How it Works</a>
+                </nav>
+            </div>
+            <div class="header__actions">
+                <svg class="action__switch-style" xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none" data-switch>
+                    <use href="./src/sprite.svg#luna" data-switch-href></use>
+                </svg>
+                <button type="button" class="sign-in__action">Sign In</button>
+                <button type="button" class="sign-up__action">Sign Up</button>
             </div>
         </header>
         <section class="dream-house">
-            
             <h1 class="dream-house__title">
                 Build Your Dream <span class="dream-house__title__house">House</span>
             </h1>
-
             <div class="dream-house__info">
                 <div class="info__left-container">
                     <p class="dream-house__text">
