--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -17,23 +17,23 @@
                 <svg class="logo header__logo day" data-header-logo>
                     <use xlink:href="sprite.svg#logo"></use>
                 </svg>
-                <ul class="header__menu__list">
-                    <li class="header__menu__lines">
+                <ul class="menu__list">
+                    <li class="menu__lines">
                         <a class="menu__links day" data-link-gallery href="#">Design Gallery</a>
                     </li>
-                    <li class="header__menu__lines">
+                    <li class="menu__lines">
                         <a class="menu__links day" data-link-list href="#">List of Architect</a>
                     </li>
-                    <li class="header__menu__lines">
+                    <li class="menu__lines">
                         <a class="menu__links day" data-link-articles href="#">Articles</a>
                     </li>
-                    <li class="header__menu__lines">
+                    <li class="menu__lines">
                         <a class="menu__links day" data-link-works href="#">How it Works</a>
                     </li>
                 </ul>
             </div>
             <div class="header__buttons">
-                <div class="header__buttons__tougle day" data-toggle>
+                <div class="header__buttons__toggle day" data-toggle>
                     <svg width="15" height="20" class="halfmoon" data-toggle-halfmoon>
                         <use xlink:href="sprite.svg#halfmoon"></use>
                     </svg>
@@ -42,7 +42,7 @@
                     </svg>
                 </div>
                 <button type="button" class="header__buttons__sign--in" data-header-button-in>Sign In</button>
-                <button type="button" data-header-button class="header__buttons__sign--up buttons day">
+                <button type="button" data-header-button class="header__buttons__sign--up button day">
                     <b>Sign Up</b>
                 </button>
             </div>
@@ -61,46 +61,48 @@
                     <p>comfortable and transparate with a</p>
                     <p>project management for the best result</p>
                 </div>
-                <button type="button" data-dreamhouse-button class="dreamhouse__aside__button buttons day">
+                <button type="button" data-dreamhouse-button class="dreamhouse__aside__button button day">
                     <b>Free Consultation</b>
                 </button>
             </div>
             <div class="dreamhouse__photo">
                 <picture>
-                    <source srcset="2x/computers_2x.png 2x">
-                    <img src="1x/computers_1x.png" alt="computers">
+                    <source srcset="2x/computers.png 2x">
+                    <img src="1x/computers.png" alt="computers">
                 </picture>
             </div>
         </div>
         <div class="block__design__title">
-            <h2 class="design__title" data-design-title>Build professional</h2>
-            <h2 class="design__title" data-design-title>valuable room for you</h2>
+            <h2 class="design__title" data-design-title>Build professional
+                <br>valuable room for you
+            </h2>
         </div>
         <div class="design">
             <picture>
-                <source srcset="2x/kitchen_2x.png 2x">
-                <img src="1x/kitchen_1x.png" alt="kitchen">
+                <source srcset="2x/kitchen.png 2x">
+                <img src="1x/kitchen.png" alt="kitchen">
             </picture>
             <picture>
-                <source srcset="2x/gasstove_2x.png 2x">
-                <img src="1x/gasstove_1x.png" alt="gasstove">
+                <source srcset="2x/gasstove.png 2x">
+                <img src="1x/gasstove.png" alt="gasstove">
             </picture>
             <picture>
-                <source srcset="2x/bedroom_2x.png 2x">
-                <img src="1x/bedroom_1x.png" alt="bedroom">
+                <source srcset="2x/bedroom.png 2x">
+                <img src="1x/bedroom.png" alt="bedroom">
             </picture>
             <picture>
-                <source srcset="2x/diningroom_2x.png 2x">
-                <img src="1x/diningroom_1x.png" alt="diningroom">
+                <source srcset="2x/diningroom.png 2x">
+                <img src="1x/diningroom.png" alt="diningroom">
             </picture>
         </div>
-        <h2 class="archmove__title" data-archmove-title>Build your needs</h2>
-        <h2 class="archmove__title" data-archmove-title>with Archmove</h2>
+        <h2 class="archmove__title" data-archmove-title>Build your needs
+            <br>with Archmove
+        </h2>
         <div class="archmove">
             <div>
                 <picture class="archmove__photo">
-                    <source srcset="2x/meeting_2x.png 2x">
-                    <img src="1x/meeting_1x.png" alt="meeting">
+                    <source srcset="2x/meeting.png 2x">
+                    <img src="1x/meeting.png" alt="meeting">
                 </picture>
             </div>
             <div class="archmove__content">
@@ -141,7 +143,7 @@
                         <p>who check directly in the field</p>
                     </div>
                 </div>
-                <button type="button" data-archmove-button class="archmove__content__button buttons day">
+                <button type="button" data-archmove-button class="archmove__content__button button day">
                     <b>FREE CONSULTATION</b>
                 </button>
             </div>
@@ -150,8 +152,8 @@
             <div class="dream-project day">
                 <div class="dream-project--photo">
                     <picture>
-                        <source srcset="2x/house_2x.png 2x">
-                        <img src="1x/house_1x.png" alt="diningroom">
+                        <source srcset="2x/house.png 2x">
+                        <img src="1x/house.png" alt="diningroom">
                     </picture>
                 </div>
                 <div class="dream-project__content">
@@ -165,7 +167,7 @@
                             </b>
                         </p>
                     </div>
-                    <button type="button" data-dream-project-button class="dream-project__content__button buttons day">
+                    <button type="button" data-dream-project-button class="dream-project__content__button button day">
                         <b>FREE CONSULTATION</b>
                     </button>
                 </div>
