--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/logoicon.ico" type="image/x-icon">
         <title>Archmove</title>
     </head>
     <body>
@@ -30,78 +30,78 @@
                 <div class="header__control">
                     <button class="header__skin-btn" type="button" data-attr-change-skin>
                         <svg class="icon">
-                            <use xlink:href="#moon" data-attr-icon></use>
+                            <use xlink:href="#light" data-attr-icon></use>
                         </svg>
                     </button>
-                    <div class="header__control">
-                        <a href="#" class="header__control-sign-in">Sign in</a>
+                    <div class="control">
+                        <a href="#" class="control__sign-in">Sign in</a>
                     </div>
-                    <button class="header__btn" type="button">Sign Up</button>
+                    <button class="control__btn" type="button">Sign Up</button>
                 </div>
             </header>
             <main class="main">
                 <div class="main__dream-house">
-                    <h1 class="main__dream-house-name">
+                    <h1 class="dream-house__name">
                         Build Your Dream <span class="main__color-word">House</span>
                     </h1>
-                    <div class="main__dream-house-info">
+                    <div class="dream-house__info">
                         <p class="dream-house__text">
                             The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
                         </p>
                         <button class="dream-house__btn" type="button">Free Consultation</button>
                     </div>
-                    <div class="main__dream-house-picture">
-                        <img class="dream-house__img" src="img/Rectangle 1.jpg" alt="dream house">
+                    <div class="dream-house__picture">
+                        <img class="picture__img" src="img/dream_house.jpg" alt="dream house">
                     </div>
                 </div>
                 <div class="main__build-room">
-                    <h3 class="main__build-room-name">Build professional valuable room for you</h3>
-                    <div class="main__build-room-picture">
-                        <img class="build-room__picture-img" src="img/img-01.jpg" alt="room 1">
-                        <img class="build-room__picture-img" src="img/img-02.jpg" alt="room 2">
-                        <img class="build-room__picture-img" src="img/img-03.jpg" alt="room 3">
-                        <img class="build-room__picture-img" src="img/img-04.jpg" alt="room 4">
+                    <h3 class="build-room__name">Build professional valuable room for you</h3>
+                    <div class="build-room__picture">
+                        <img class="build-room__img" src="img/room-01.jpg" alt="room 1">
+                        <img class="build-room__img" src="img/room-02.jpg" alt="room 2">
+                        <img class="build-room__img" src="img/room-03.jpg" alt="room 3">
+                        <img class="build-room__img" src="img/room-04.jpg" alt="room 4">
                     </div>
                 </div>
                 <div class="main__archmove">
-                    <h3 class="main__archmove-name">Build your needs with Archmove</h3>
-                    <div class="main__archmove-info">
-                        <div class="main__archmove-picture">
-                            <img src="img/img-5.jpg" alt="archmove">
+                    <h3 class="archmove__name">Build your needs with Archmove</h3>
+                    <div class="archmove__info">
+                        <div class="archmove__picture">
+                            <img src="img/people.jpg" alt="archmove">
                         </div>
                         <div class="main__archmove-consultation">
                             <ul class="consultation__list">
-                                <li class="consultation__list-info">
-                                    <div class="list__info-img">
+                                <li class="list__info">
+                                    <div class="info__img">
                                         <svg class="guaranteed">
                                             <use xlink:href="#guaranteed"></use>
                                         </svg>
                                     </div>
-                                    <div class="list__info-text">
-                                        <p class="list__info-name">100% guaranteed project completion</p>
-                                        <p class="list__info-paragraph">Build safe, comfortable and transparent with a project management application with a joint account.</p>
+                                    <div class="info__text">
+                                        <p class="info__name">100% guaranteed project completion</p>
+                                        <p class="info__paragraph">Build safe, comfortable and transparent with a project management application with a joint account.</p>
                                     </div>
                                 </li>
-                                <li class="consultation__list-info">
-                                    <div class="list__info-img">
+                                <li class="list__info">
+                                    <div class="info__img">
                                         <svg class="fees">
                                             <use xlink:href="#fees"></use>
                                         </svg>
                                     </div>
-                                    <div class="list__info-text">
-                                        <p class="list__info-name">No additional fees</p>
-                                        <p class="list__info-paragraph">There are no hidden costs. The value of the offer you get is the value you paid.</p>
+                                    <div class="info__text">
+                                        <p class="info__name">No additional fees</p>
+                                        <p class="info__paragraph">There are no hidden costs. The value of the offer you get is the value you paid.</p>
                                     </div>
                                 </li>
-                                <li class="consultation__list-info">
-                                    <div class="list__info-img">
+                                <li class="list__info">
+                                    <div class="info__img">
                                         <svg class="escort">
                                             <use xlink:href="#escort"></use>
                                         </svg>
                                     </div>
-                                    <div class="list__info-text">
-                                        <p class="list__info-name">Get escort from the Team</p>
-                                        <p class="list__info-paragraph">Monitor reports from the Arsitag team who check directly in the field.</p>
+                                    <div class="info__text">
+                                        <p class="info__name">Get escort from the Team</p>
+                                        <p class="info__paragraph">Monitor reports from the Arsitag team who check directly in the field.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -110,11 +110,11 @@
                     </div>
                 </div>
                 <div class="main__realize-dream">
-                    <div class="main__realize-dream-img">
-                        <img src="img/img.png" alt="house in the sky">
+                    <div class="realize-dream__img">
+                        <img src="img/house_in_sky.png" alt="house in the sky">
                     </div>
-                    <div class="main__realize-dream-text">
-                        <h3 class="main__realize-dream-name">
+                    <div class="realize-dream__text">
+                        <h3 class="realize-dream__name">
                             Realize your dream project with <span class="main__color-word">Archmove</span>
                         </h3>
                         <button class="free-consultation__btn free-consultation__btn--no-margin" type="button">FREE CONSULTATION</button>
@@ -123,11 +123,11 @@
             </main>
             <footer class="footer">
                 <div class="footer__menu">
-                    <a class="footer__menu-link" href="#About Us">About Us</a>
-                    <a class="footer__menu-link" href="#How it Works">How it Works</a>
-                    <a class="footer__menu-link" href="#FAQ">FAQ</a>
-                    <a class="footer__menu-link" href="#Contact Us">Contact Us</a>
-                    <a class="footer__menu-link" href="#Privacy Policy">Privacy Policy</a>
+                    <a class="menu__link" href="#About Us">About Us</a>
+                    <a class="menu__link" href="#How it Works">How it Works</a>
+                    <a class="menu__link" href="#FAQ">FAQ</a>
+                    <a class="menu__link" href="#Contact Us">Contact Us</a>
+                    <a class="menu__link" href="#Privacy Policy">Privacy Policy</a>
                 </div>
                 <a class="footer__logo" href="#">
                     <svg class="logo">
@@ -150,12 +150,12 @@
                     <path d="M51.5859 22.6995C51.5859 25.9724 54.0045 28 57.0716 28C58.986 28 60.5504 27.3104 61.3017 26.1783L61.2914 25.674C60.7768 26.1989 59.9123 26.5797 58.9036 26.5797C56.8246 26.5797 55.2911 25.0667 55.0235 22.3908H61.4355C61.4561 22.2158 61.487 21.9482 61.487 21.6806C61.487 19.1281 59.7785 17.3682 56.9275 17.3682C53.7164 17.3682 51.5859 19.5707 51.5859 22.6995ZM54.972 21.5056C54.972 19.2928 55.6822 18.0474 56.9275 18.0474C58.0185 18.0474 58.5125 19.2208 58.5125 21.0528C58.5125 21.3512 58.5125 21.5674 58.5022 21.7629L54.9823 21.8041C54.972 21.7012 54.972 21.6086 54.972 21.5056Z" fill="#FD665E"></path>
                 </g>
             </symbol>
-            <symbol id="moon" viewBox="0 0 16 20">
+            <symbol id="light" viewBox="0 0 16 20">
                 <g>
                     <path d="M5.5 0C3.68 0 1.97 0.5 0.5 1.35C3.49 3.08 5.5 6.3 5.5 10C5.5 13.7 3.49 16.92 0.5 18.65C1.97 19.5 3.68 20 5.5 20C11.02 20 15.5 15.52 15.5 10C15.5 4.48 11.02 0 5.5 0Z"></path>
                 </g>
             </symbol>
-            <symbol id="sun" viewBox="0 0 24 24">
+            <symbol id="dark" viewBox="0 0 24 24">
                 <g>
                     <path d="M12 4.875C8.07127 4.875 4.875 8.07127 4.875 12C4.875 15.9287 8.07127 19.125 12 19.125C15.9287 19.125 19.125 15.9287 19.125 12C19.125 8.07127 15.9287 4.875 12 4.875ZM12 17.625C10.8875 17.625 9.79994 17.2951 8.87492 16.677C7.94989 16.0589 7.22892 15.1804 6.80318 14.1526C6.37743 13.1248 6.26604 11.9938 6.48308 10.9026C6.70012 9.81147 7.23585 8.80919 8.02252 8.02252C8.80919 7.23585 9.81147 6.70012 10.9026 6.48308C11.9938 6.26604 13.1248 6.37743 14.1526 6.80318C15.1804 7.22892 16.0589 7.94989 16.677 8.87492C17.2951 9.79994 17.625 10.8875 17.625 12C17.6233 13.4913 17.0301 14.9211 15.9756 15.9756C14.9211 17.0301 13.4913 17.6233 12 17.625Z"></path>
                     <path d="M11.25 0.75H12.75V3H11.25V0.75Z"></path>
