--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/8-css-variables/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/8-css-variables/index.html
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                 </nav>
-                <button class="header__button" type="button">
+                <button class="header__button" type="button" data-button>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <use class="header__button-night-theme" href="images/sprite.svg#night-theme" data-night-theme></use>
                         <use class="header__button-day-theme" href="images/sprite.svg#day-theme" data-day-theme></use>
