changed situation of h

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -42,34 +42,31 @@
                     </svg>
                 </div>
                 <button type="button" class="header__buttons__sign--in" data-header-button-in>Sign In</button>
-                <button type="button" data-header-button class="header__buttons__sign--up button day">
-                    <b>Sign Up</b>
-                </button>
+                <button type="button" data-header-button class="header__buttons__sign--up button day">Sign Up</button>
             </div>
         </header>
-        <div class="dreamhouse__title-container">
-            <h1 class="dreamhouse__title-container__title" data-dreamhouse-title>
-                Build Your Dream <span class="word--color day">House</span>
-            </h1>
-        </div>
         <div class="dreamhouse">
-            <div class="dreamhouse__aside">
-                <div class="dreamhouse__aside__text" data-dreamhouse-text>
-                    <p>The first and most trusted marketplace</p>
-                    <p>of design & build house in the World.</p>
-                    <p>100% guaranted Build safe,</p>
-                    <p>comfortable and transparate with a</p>
-                    <p>project management for the best result</p>
+            <h1 class="dreamhouse__title" data-dreamhouse-title>
+                Build Your<br>
+                Dream <span class="word--color day">House</span>
+            </h1>
+            <div class="dreamhouse__container">
+                <div class="dreamhouse__aside">
+                    <div class="dreamhouse__aside__text" data-dreamhouse-text>
+                        <p>The first and most trusted marketplace</p>
+                        <p>of design & build house in the World.</p>
+                        <p>100% guaranted Build safe,</p>
+                        <p>comfortable and transparate with a</p>
+                        <p>project management for the best result</p>
+                    </div>
+                    <button type="button" data-dreamhouse-button class="dreamhouse__aside__button button day">Free Consultation</button>
                 </div>
-                <button type="button" data-dreamhouse-button class="dreamhouse__aside__button button day">
-                    <b>Free Consultation</b>
-                </button>
-            </div>
-            <div class="dreamhouse__photo">
-                <picture>
-                    <source srcset="2x/computers.png 2x">
-                    <img src="1x/computers.png" alt="computers">
-                </picture>
+                <div class="dreamhouse__photo">
+                    <picture>
+                        <source srcset="2x/computers.png 2x">
+                        <img src="1x/computers.png" alt="computers">
+                    </picture>
+                </div>
             </div>
         </div>
         <div class="block__design__title">
@@ -95,57 +92,57 @@
                 <img src="1x/diningroom.png" alt="diningroom">
             </picture>
         </div>
-        <h2 class="archmove__title" data-archmove-title>Build your needs
-            <br>with Archmove
-        </h2>
         <div class="archmove">
-            <div>
-                <picture class="archmove__photo">
-                    <source srcset="2x/meeting.png 2x">
-                    <img src="1x/meeting.png" alt="meeting">
-                </picture>
-            </div>
-            <div class="archmove__content">
-                <div class="archmove__content__part--bird">
-                    <svg width="48" height="56" class="archmove__icon--bird day" data-icon-bird>
-                        <use xlink:href="sprite.svg#bird"></use>
-                    </svg>
-                    <div class="archmove__content__part--text" data-archmove-text>
-                        <h4>
-                            <b>100% guaranted project completion</b>
-                        </h4>
-                        <p>Build safe, comfortable and transparent</p>
-                        <p>with a project management applacation</p>
-                        <p>with a joint account</p>
-                    </div>
+            <h2 class="archmove__title" data-archmove-title>Build your needs
+                <br>with Archmove
+            </h2>
+            <div class="archmove__container">
+                <div>
+                    <picture class="archmove__photo">
+                        <source srcset="2x/meeting.png 2x">
+                        <img src="1x/meeting.png" alt="meeting">
+                    </picture>
                 </div>
-                <div class="archmove__content__part">
-                    <svg width="39" height="48" class="archmove__icon day" data-icon-dollar>
-                        <use xlink:href="sprite.svg#dollar"></use>
-                    </svg>
-                    <div class="archmove__content__part--text" data-archmove-text>
-                        <h4>
-                            <b>No additional fees</b>
-                        </h4>
-                        <p>There are no hidden costs. The value of</p>
-                        <p>the offer you get is the value you paid</p>
+                <div class="archmove__content">
+                    <div class="archmove__content__part--bird">
+                        <svg width="48" height="56" class="archmove__icon--bird day" data-icon-bird>
+                            <use xlink:href="sprite.svg#bird"></use>
+                        </svg>
+                        <div class="archmove__content__part--text" data-archmove-text>
+                            <h4>
+                                <b>100% guaranted project completion</b>
+                            </h4>
+                            <p>Build safe, comfortable and transparent</p>
+                            <p>with a project management applacation</p>
+                            <p>with a joint account</p>
+                        </div>
                     </div>
-                </div>
-                <div class="archmove__content__part">
-                    <svg width="40" height="53" class="archmove__icon day" data-icon-circle="">
-                        <use xlink:href="sprite.svg#circle"></use>
-                    </svg>
-                    <div class="archmove__content__part--text" data-archmove-text>
-                        <h4>
-                            <b>Get escort from the Team</b>
-                        </h4>
-                        <p>Monitor reports from Arsitag team</p>
-                        <p>who check directly in the field</p>
+                    <div class="archmove__content__part">
+                        <svg width="39" height="48" class="archmove__icon day" data-icon-dollar>
+                            <use xlink:href="sprite.svg#dollar"></use>
+                        </svg>
+                        <div class="archmove__content__part--text" data-archmove-text>
+                            <h4>
+                                <b>No additional fees</b>
+                            </h4>
+                            <p>There are no hidden costs. The value of</p>
+                            <p>the offer you get is the value you paid</p>
+                        </div>
                     </div>
+                    <div class="archmove__content__part">
+                        <svg width="40" height="53" class="archmove__icon day" data-icon-circle="">
+                            <use xlink:href="sprite.svg#circle"></use>
+                        </svg>
+                        <div class="archmove__content__part--text" data-archmove-text>
+                            <h4>
+                                <b>Get escort from the Team</b>
+                            </h4>
+                            <p>Monitor reports from Arsitag team</p>
+                            <p>who check directly in the field</p>
+                        </div>
+                    </div>
+                    <button type="button" data-archmove-button class="archmove__content__button button day">FREE CONSULTATION</button>
                 </div>
-                <button type="button" data-archmove-button class="archmove__content__button button day">
-                    <b>FREE CONSULTATION</b>
-                </button>
             </div>
         </div>
         <div class="bottom day" data-container>
@@ -167,9 +164,7 @@
                             </b>
                         </p>
                     </div>
-                    <button type="button" data-dream-project-button class="dream-project__content__button button day">
-                        <b>FREE CONSULTATION</b>
-                    </button>
+                    <button type="button" data-dream-project-button class="dream-project__content__button button day">FREE CONSULTATION</button>
                 </div>
             </div>
             <div class="footer">
