--- a/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
@@ -24,8 +24,11 @@
                 </nav>
             </div>
             <div class="header__actions">
-                <svg class="action__switch-style" xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none" data-switch>
-                    <use href="./src/sprite.svg#luna" data-switch-href></use>
+                <svg class="action__switch-style" xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none" data-switch-luna>
+                    <use href="./src/sprite.svg#luna"></use>
+                </svg>
+                <svg class="action__switch-style" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" data-switch-sun>
+                    <use href="./src/sprite.svg#sun"></use>
                 </svg>
                 <button type="button" class="sign-in__action">Sign In</button>
                 <button type="button" class="sign-up__action">Sign Up</button>
