fixed small issues

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -124,7 +124,7 @@
                                     <h3 class="features-section__sub-title">
                                         100% guaranteed project completion
                                     </h3>
-                                    <p class="features-section__description">
+                                    <p class="features-section__lead">
                                         Build safe, comfortable and transparent with a project management application with a joint account.
                                     </p>
                                 </div>
@@ -138,7 +138,7 @@
                                     <h3 class="features-section__sub-title">
                                         No additional fees
                                     </h3>
-                                    <p class="features-section__description">
+                                    <p class="features-section__lead">
                                         There are no hidden costs. The value of the offer you get is the value you paid.
                                     </p>
                                 </div>
@@ -152,12 +152,15 @@
                                     <h3 class="features-section__sub-title">
                                         Get escort from the Team
                                     </h3>
-                                    <p class="features-section__description">
+                                    <p class="features-section__lead">
                                         Monitor reports from the Arsitag team who check directly in the field.
                                     </p>
                                 </div>
                             </li>
                         </ul>
+                        <button class="features-section__full-button" type="button">
+                            FREE CONSULTATION
+                        </button>
                     </div>
                 </div>
             </div>
