fixed gradient and strict width

--- a/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="header">
+        <div class="header">
             <div class="header__left-container">
                 <a href="#" class="header__logo">
                     <svg class="logo__icon" xmlns="http://www.w3.org/2000/svg" width="62" height="28" viewBox="0 0 62 28" fill="none">
@@ -33,10 +33,11 @@
                 <button type="button" class="sign-in__action">Sign In</button>
                 <button type="button" class="sign-up__action">Sign Up</button>
             </div>
-        </header>
+        </div>
         <section class="dream-house">
             <h1 class="dream-house__title">
-                Build Your Dream <span class="dream-house__title__house">House</span>
+                Build Your <br>
+                Dream <span class="dream-house__title__house">House</span>
             </h1>
             <div class="dream-house__info">
                 <div class="info__left-container">
@@ -49,22 +50,27 @@
             </div>
         </section>
         <section class="valuable-rooms">
-            <p class="valuable-rooms__title">Build professional valuable room for you</p>
+            <p class="valuable-rooms__title">
+                Build professional <br> valuable room for you
+            </p>
             <div class="valuable-rooms__list">
-                <img src="src/list1.png" alt="list1" class="valuable-rooms__img">
-                <img src="src/list2.png" alt="list2" class="valuable-rooms__img">
-                <img src="src/list3.png" alt="list3" class="valuable-rooms__img">
-                <img src="src/list4.png" alt="list4" class="valuable-rooms__img">
+                <img src="src/list1.png" alt="valuable room" class="valuable-rooms__img">
+                <img src="src/list2.png" alt="valuable room" class="valuable-rooms__img">
+                <img src="src/list3.png" alt="valuable room" class="valuable-rooms__img">
+                <img src="src/list4.png" alt="valuable room" class="valuable-rooms__img">
             </div>
         </section>
         <section class="needs">
-            <p class="needs__title">Build your needs with Archmove</p>
+            <p class="needs__title">
+                Build your needs <br>
+                with Archmove
+            </p>
             <div class="needs__info">
                 <img src="src/needs-main.png" alt="needs image" class="needs__image">
                 <div class="needs__right-info">
                     <div class="needs__list">
                         <div class="needs__list__item">
-                            <svg class="needs__item__icon" width="48" height="56" viewBox="0 0 48 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="needs__item__icon" width="48" height="56" viewBox="0 0 48 56" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="white">
                                 <use href="./src/sprite.svg#guard"></use>
                             </svg>
                             <div class="needs__item__info">
@@ -73,7 +79,7 @@
                             </div>
                         </div>
                         <div class="needs__list__item">
-                            <svg class="needs__item__icon" width="39" height="48" viewBox="0 0 39 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="needs__item__icon" width="39" height="48" viewBox="0 0 39 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="white">
                                 <use href="./src/sprite.svg#money"></use>
                             </svg>
                             <div class="needs__item__info">
@@ -82,7 +88,7 @@
                             </div>
                         </div>
                         <div class="needs__list__item">
-                            <svg class="needs__item__icon" width="40" height="53" viewBox="0 0 40 53" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="needs__item__icon" width="40" height="53" viewBox="0 0 40 53" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="white">
                                 <use href="./src/sprite.svg#house"></use>
                             </svg>
                             <div class="needs__item__info">
@@ -98,15 +104,17 @@
             </div>
         </section>
         <section class="realize-house">
-            <img src="src/realize.png" alt="realize house" class="realize-house__image">
-            <div class="realize-house__info">
+            <div class="realize-house__container">
+                <img src="src/realize.png" alt="realize house" class="realize-house__image">
+                <div class="realize-house__info">
 
-                <p class="realize-house__title"> Realize your dream
-                    <br>
-                    project with <span class="realize-house__title-red">Archmove</span>
-                </p>
+                    <p class="realize-house__title"> Realize your dream
+                        <br>
+                        project with <span class="realize-house__title-red">Archmove</span>
+                    </p>
 
-                <button type="button" class="realize-house__button">FREE CONSULTATION</button>
+                    <button type="button" class="realize-house__button">FREE CONSULTATION</button>
+                </div>
             </div>
         </section>
         <footer class="footer">
