changed variables and js

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -14,27 +14,27 @@
     <body data-body>
         <header class="header__content">
             <div class="header__menu">
-                <svg class="logo header__logo day" data-header-logo>
+                <svg class="logo header__logo" data-header-logo>
                     <use xlink:href="sprite.svg#logo"></use>
                 </svg>
                 <ul class="menu__list">
                     <li class="menu__lines">
-                        <a class="menu__links day" data-link-gallery href="#">Design Gallery</a>
+                        <a class="menu__links" data-link-gallery href="#">Design Gallery</a>
                     </li>
                     <li class="menu__lines">
-                        <a class="menu__links day" data-link-list href="#">List of Architect</a>
+                        <a class="menu__links" data-link-list href="#">List of Architect</a>
                     </li>
                     <li class="menu__lines">
-                        <a class="menu__links day" data-link-articles href="#">Articles</a>
+                        <a class="menu__links" data-link-articles href="#">Articles</a>
                     </li>
                     <li class="menu__lines">
-                        <a class="menu__links day" data-link-works href="#">How it Works</a>
+                        <a class="menu__links" data-link-works href="#">How it Works</a>
                     </li>
                 </ul>
             </div>
             <div class="header__buttons">
-                <div class="header__buttons__toggle day" data-toggle>
-                    <svg width="15" height="20" class="halfmoon" data-toggle-halfmoon>
+                <div class="header__buttons__toggle" data-toggle>
+                    <svg width="15" height="20" class="halfmoon" data-halfmoon>
                         <use xlink:href="sprite.svg#halfmoon"></use>
                     </svg>
                     <svg width="24" height="24" class="sun">
@@ -42,13 +42,13 @@
                     </svg>
                 </div>
                 <button type="button" class="header__buttons__sign--in" data-header-button-in>Sign In</button>
-                <button type="button" data-header-button class="header__buttons__sign--up button day">Sign Up</button>
+                <button type="button" data-header-button class="header__buttons__sign--up button">Sign Up</button>
             </div>
         </header>
         <div class="dreamhouse">
             <h1 class="dreamhouse__title" data-dreamhouse-title>
                 Build Your<br>
-                Dream <span class="word--color day">House</span>
+                Dream <span class="word--color">House</span>
             </h1>
             <div class="dreamhouse__container">
                 <div class="dreamhouse__aside">
@@ -59,7 +59,7 @@
                         <p>comfortable and transparate with a</p>
                         <p>project management for the best result</p>
                     </div>
-                    <button type="button" data-dreamhouse-button class="dreamhouse__aside__button button day">Free Consultation</button>
+                    <button type="button" data-dreamhouse-button class="dreamhouse__aside__button button">Free Consultation</button>
                 </div>
                 <div class="dreamhouse__photo">
                     <picture>
@@ -70,9 +70,11 @@
             </div>
         </div>
         <div class="design">
-            <h2 class="design__title" data-design-title>Build professional
-                <br>valuable room for you
-            </h2>
+            <div class="design__title">
+                <h2 class="design__title--text" data-design-title>Build professional
+                    <br>valuable room for you
+                </h2>
+            </div>
             <div class="design__photo">
                 <picture>
                     <source srcset="2x/kitchen.png 2x">
@@ -105,7 +107,7 @@
                 </div>
                 <div class="archmove__content">
                     <div class="archmove__content__part--bird">
-                        <svg width="48" height="56" class="archmove__icon--bird day" data-icon-bird>
+                        <svg width="48" height="56" class="archmove__icon--bird" data-icon-bird>
                             <use xlink:href="sprite.svg#bird"></use>
                         </svg>
                         <div class="archmove__content__part--text" data-archmove-text>
@@ -118,7 +120,7 @@
                         </div>
                     </div>
                     <div class="archmove__content__part">
-                        <svg width="39" height="48" class="archmove__icon day" data-icon-dollar>
+                        <svg width="39" height="48" class="archmove__icon" data-icon-dollar>
                             <use xlink:href="sprite.svg#dollar"></use>
                         </svg>
                         <div class="archmove__content__part--text" data-archmove-text>
@@ -130,7 +132,7 @@
                         </div>
                     </div>
                     <div class="archmove__content__part">
-                        <svg width="40" height="53" class="archmove__icon day" data-icon-circle="">
+                        <svg width="40" height="53" class="archmove__icon" data-icon-circle="">
                             <use xlink:href="sprite.svg#circle"></use>
                         </svg>
                         <div class="archmove__content__part--text" data-archmove-text>
@@ -141,12 +143,12 @@
                             <p>who check directly in the field</p>
                         </div>
                     </div>
-                    <button type="button" data-archmove-button class="archmove__content__button button day">FREE CONSULTATION</button>
+                    <button type="button" data-archmove-button class="archmove__content__button button">FREE CONSULTATION</button>
                 </div>
             </div>
         </div>
         <div class="bottom day" data-container>
-            <div class="dream-project day">
+            <div class="dream-project">
                 <div class="dream-project__photo">
                     <picture>
                         <source srcset="2x/house.png 2x">
@@ -158,10 +160,10 @@
                         <p>
                             Realize your dream<br>
                             project with
-                            <span class="word--color day">Archmove</span>
+                            <span class="word--color">Archmove</span>
                         </p>
                     </div>
-                    <button type="button" data-dream-project-button class="dream-project__content__button button day">FREE CONSULTATION</button>
+                    <button type="button" data-dream-project-button class="dream-project__content__button button">FREE CONSULTATION</button>
                 </div>
             </div>
             <div class="footer">
@@ -194,7 +196,7 @@
                         </li>
                     </ul>
                 </div>
-                <svg class="logo footer__logo day" data-footer-logo>
+                <svg class="logo footer__logo" data-footer-logo>
                     <use xlink:href="sprite.svg#logo"></use>
                 </svg>
             </div>
